tests/generics/instantiation_bound_violations.sim
# Use-site bound violations at instantiation.
#
# A generic decl declares a bound on its type parameter; a caller
# passes an argument whose class doesn't imply that bound.
# `validate_type` walks `Custom(name, args)` and, for each arg,
# checks `class_of(arg, scope).implies(bound)`.

struct<T: Copy + Drop> Box: Copy + Drop { inner: T }

enum<T: Copy + Drop> Option: Copy + Drop { None: unit  Some: T }

# `Linear` declares no markers — its class is empty, so it satisfies
# neither Copy nor Drop. Any use of `Box<Linear>` fails the bound
# check on Box's T.
struct Linear { x: i64 }

# Type-argument arity: Box takes exactly one param.
struct WrongArity1 { field: Box<i32, bool> }
struct WrongArity2 { field: Box }

# Use-site bound failure via a field type of a non-generic struct.
struct UsesBadBox { field: Box<Linear> }

# Same failure via a function parameter.
fn take(b: Box<Linear>) {
  entry:
    return
}

# Nested violation: `Option<&out U>` fails because `&out U` is
# Move only, not Copy + Drop. Runs inside a generic scope where
# `U: Move` — the check consults the scope for U's class, then
# rejects it against Option's stricter bound.
fn<U: Move> option_of_out(x: Option<&out U>) {
  entry:
    return
}

# Nested violation at inner layer: `Box<Option<Linear>>` — inner
# `Option<Linear>` fails Option's `T: Copy + Drop` bound. The
# outer Box is only evaluated after the inner fails.
struct DeepBadBox { field: Box<Option<Linear>> }

fn main() {
  entry:
    return
}
